	PR c++/55877 	* decl.c (reset_type_linkage, bt_reset_linkage): New. 	(grokdeclarator): Use reset_type_linkage. 	* name-lookup.c (binding_table_foreach): Handle null table. 	* tree.c (decl_anon_ns_mem_p): Check TYPE_MAIN_DECL, not TYPE_NAME.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@194910 138bc75d-0d04-0410-961f-82ee72b054a4